# prompt-engin

./: .antigravityrules  .core  .cursorrules  .cursorrules.all  .cursorrules.core  .editorconfig  .gitignore  .pre-commit-config.yaml  .traerules  AGENTS.md  AI_GENERATED.md  CHANGELOG.md  CHANGELOG_SIMPLE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PROJECT_SETUP.md  PROMPTS_OVERVIEW.md  QUICK_START.md  README.md  TEST_AND_SANITIZATION_REPORT.md  combined.md  common.md  merged_prompts.md  pyproject.toml  requirements-dev.txt  requirements.txt  rules.antigravityrules  setup.py  skill-engine
.claude/skills/: README.md
.claude/skills/architecture-diagram-template/: SKILL.md
.claude/skills/code-organization/: SKILL.md
.claude/skills/compatibility-check/: SKILL.md
.claude/skills/design-principles/: SKILL.md
.claude/skills/document-format/: SKILL.md
.claude/skills/document-generation/: SKILL.md
.claude/skills/exception-handling/: SKILL.md
.claude/skills/file-reading/: SKILL.md
.claude/skills/modular-output/: SKILL.md
.claude/skills/open-question-confirmation/: SKILL.md
.claude/skills/phase-implementation/: SKILL.md
.claude/skills/problem-location/: SKILL.md
.claude/skills/project-clean-principle/: SKILL.md
.claude/skills/time-check/: SKILL.md
.claude/skills/time-format/: SKILL.md
.claude/skills/wiki-output/: SKILL.md
.github/workflows/: ci.yml
docs/: SKILLS_MANAGE_GUIDE.md  SKILL_OPTIMIZATION_GUIDE.md  TECHNICAL_ANALYSIS.md
docs/api/: README.md
docs/examples/todo-cli-vaildation/: README.md  prompts-collection.md  quick-start.md  rule-validation-guide.md
docs/feature/: 2025.MD
docs/guides/: BATCH_INSTALL_GUIDE.md  INSTALLATION_AND_TESTING.md  QUICK_REFERENCE.md  SKILLS_CREATION.md  SKILLS_QUICK_REFERENCE.md  USAGE_MANUAL.md  multi-platform-rules-guide.md  skills-usage-guide.md  user-guide.md
docs/milestones/V1_SKILL/: QUICK_START_SKILLS.md  README.md  SKILLS_CREATION.md  SKILLS_LIST.md  TROUBLESHOOTING.md  USAGE_EXAMPLE.md  V1_SKILL_SYSTEM_GUIDE.md  token-optimization-guide.md
docs/milestones/V2_multi-platform-rules/: EXECUTION_PLAN.md  README.md  README_RESTRUCTURE_PLAN.md  V2_IMPROVEMENT_PLAN.md  multi-platform-rules-guide.md
docs/other/20251229/: Context-Engine-介绍.md  README.md  完整分享内容-v15-2025-12-31.md  完整分享内容-v16-2025-12-31.md  完整分享内容-v2.0-2025-12-31.md  完整分享内容-v30-2025-12-31.md  完整分享内容-终版.md
examples/: README.md
examples/basic-usage/: example.py
prompts/: OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  README.md
prompts/stages/common/: README.md
prompts/stages/design/: README.md
prompts/stages/development/: README.md
prompts/stages/documentation/: README.md  architecture-diagram-template.md  document-generation.md  wiki-output.md
prompts/stages/requirements/: README.md
prompts/stages/testing/: README.md
prompts/templates/: README.md  project-template.md  rule-modularization-guide.md  stage-template.md  technical-solution-template.md
prompts/types/backend/: README.md
prompts/types/frontend/: README.md
prompts/types/fullstack/: README.md
prompts/types/mobile/: README.md
scripts/: core-to-skills.py  merge-core.sh  migrate_to_official_structure.py  prompt-engine  split-core.py  sync.sh
scripts/core/: .SYNC_README.md  .sync_from_cursor_rules.py  .sync_from_cursor_rules.sh  merge_prompts.sh
scripts/skills_sync/: __init__.py  sync_skill.py
scripts/utils/: add_overview_section.sh  convert_rule_to_skill.py  generate_all_skills.sh  generate_dist.sh  install_all_skills.sh  stat_metrics.sh  sync_to_project.sh  test_environment.sh  test_skills_generation.sh  test_sync_scripts.sh  validate_prompts.sh
skills/: README.md  SKILL_TEMPLATE.md
skills/code/: README.md
skills/code/debugging/: SKILL.md
skills/code/design-principles/: SKILL.md
skills/code/organization/: SKILL.md
skills/core/: README.md
skills/core/act-mode/: SKILL.md
skills/core/code-format/: SKILL.md
skills/core/comments/: SKILL.md
skills/core/error-handling-strategy/: SKILL.md
skills/core/error-logging/: SKILL.md
skills/core/error-message-format/: SKILL.md
skills/core/file-write/: SKILL.md
skills/core/function-design/: SKILL.md
skills/core/mode-common/: SKILL.md
skills/core/naming/: SKILL.md
skills/core/plan-mode/: SKILL.md
skills/core/return-values/: SKILL.md
skills/core/security-permissions/: SKILL.md
skills/core/solution-output/: SKILL.md
skills/core/tool-permission-system/: SKILL.md
skills/documentation/: README.md
skills/documentation/architecture-diagram/: SKILL.md
skills/documentation/format/: SKILL.md
skills/interaction/: README.md
skills/interaction/time-check/: SKILL.md
skills/project/: README.md
skills/workflow/: README.md
src/prompt_engine/: __init__.py  cli.py  generator.py  merger.py  parser.py  validator.py
src/skill_engine/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_commands.py  test_utils.py
tests/unit/: test_parser.py  test_validator.py
(+89 files in other folders)
