[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engine"
version = "0.2.0"
description = "A structured prompt engineering tool for organizing, managing, and reusing prompts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Prompt Engine Contributors"}
]
keywords = [
    # 核心关键字：提示词（重点突出）
    "prompt",
    "prompt-engineering",
    "prompt-template",
    "prompt-management",
    "prompt-library",
    "prompt-optimization",
    "prompt-versioning",
    "prompt-validation",
    "prompts",
    # AI 相关
    "ai",
    "ai-assistant",
    "ai-tools",
    "ai-development",
    "ai-generated",
    "llm",
    "chatgpt",
    "claude",
    "cursor",
    # 规则相关（辅助）
    "rules",
    "rule-engine",
    "rule-management",
    "cursor-rules",
    # 工程和工具
    "engineering",
    "template",
    "template-engine",
    "developer-tools",
    "software-engineering",
    "automation",
    # 技术栈
    "python",
    "cli-tool",
    "markdown",
    "yaml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
prompt-engine = "prompt_engine.cli:main"

[tool.setuptools]
packages = {find = {}}
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/prompt_engine",
    "--cov-report=html",
    "--cov-report=term",
]

