[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cjt-skill-engine"
version = "2.0.0"
description = "Skills-based AI Skill Engine Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CJT Team"}
]
keywords = [
    # 核心关键字：Skills（重点突出）
    "skills",
    "skill-based",
    "skill-management",
    "skill-engineering",
    "prompt-management",
    # AI 相关
    "ai",
    "ai-assistant",
    "ai-tools",
    "ai-development",
    "llm",
    "chatgpt",
    "claude",
    "cursor",
    "cursor-ide",
    # 规则相关
    "rules",
    "rule-engine",
    "rule-management",
    # 工程和工具
    "engineering",
    "modular",
    "developer-tools",
    "software-engineering",
    "automation",
    # 技术栈
    "python",
    "cli-tool",
    "markdown",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    # 保持依赖简洁
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
skill-engine = "skill_engine.cli:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/skill_engine",
    "--cov-report=html",
    "--cov-report=term",
]

